# fao-stac-extensions

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yaml  test.yaml
docs/: critical-review.md
docs/drafts/: ogc-metadata-coordination.md  stac-community-submission.md
extensions/fao/: CHANGELOG.md  README.md
extensions/fao/examples/: README.md  collection-mosaic.json  collection-mosaicset.json  collection.json  item-mosaicset.json  item.json
extensions/fao/json-schema/: schema.json
extensions/iso-to-stac/: CHANGELOG.md  README.md
extensions/iso-to-stac/examples/: collection.json  item.json
extensions/iso-to-stac/json-schema/: schema.json
extensions/iso-to-stac/mapping/: iso19115-2-to-stac.md
reference-implementation/: README.md  pyproject.toml
reference-implementation/src/fao_stac_extensions/: __init__.py
reference-implementation/src/fao_stac_extensions/fao/: __init__.py
reference-implementation/src/fao_stac_extensions/iso_to_stac/: __init__.py
reference-implementation/tests/: test_examples.py  test_imports.py
